# burnt-apple

./: Cargo.toml  README.md
notes/: refactor.md
python/: whisperx_daemon.py
src/: lib.rs  main.rs  tracing.rs
src/cli/: global_args.rs  json_to_stdout_pretty.rs  mod.rs  output_format.rs  to_args.rs
src/cli/command/: mod.rs
src/cli/command/experiment/: experiment.rs  experiment_command.rs  experiment_list_command.rs  experiment_run_command.rs  mod.rs
src/cli/command/experiment/experiments/: mod.rs  tensor_addition_experiment.rs
src/cli/command/model/: direct.rs  mod.rs  model_command.rs  model_list_command.rs  model_registry.rs  model_train_command.rs  settings.rs
src/cli/command/model/kind/: mod.rs  model_kind_command.rs  model_kind_list_command.rs
